# pr-automation-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONNECTING.md  LICENSE  PRIVACY.md  README.md  paper.md  paper.tex  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_ingest_asset.yml
.github/workflows/: eu-ai-act-compliance.yml  ingest-assets-ci.yml  publish.yml
compliance/: AI_TRANSPARENCY_NOTICE.md  HUMAN_OVERSIGHT_POLICY.md
examples/: defs.py
examples/dagster/: defs.py
examples/dagster/db/postgres/: orders_replication_asset.py
examples/dagster/graphql/countries/: countries_asset.py
examples/dagster/rest/jsonplaceholder/: posts_asset.py
examples/db/postgres/: orders_replication_asset.py
examples/graphql/countries/: countries_asset.py
examples/plain/db/postgres/: orders_replicate.py
examples/plain/graphql/countries/: countries_fetch.py
examples/plain/rest/jsonplaceholder/: posts_fetch.py
examples/rest/jsonplaceholder/: posts_asset.py
src/pr_automation_agent/: __init__.py  audit.py  base.py  cli.py  resolvers.py
src/pr_automation_agent/integrations/dagster/: __init__.py  base.py  resources.py
tests/: test_audit.py  test_base.py  test_cli.py  test_resolvers.py
tests/integrations/: test_dagster.py
tmp/: jurisdiction_experiment.py  jurisdiction_results.json  pypi_eu_downloads.py  pypi_eu_results.json
warehouse/oso_dagster/assets/ingest/: defs_sandbox.py
warehouse/oso_dagster/assets/ingest/db/postgres/: orders_replication_asset.py
warehouse/oso_dagster/assets/ingest/graphql/countries/: countries_asset.py
warehouse/oso_dagster/assets/ingest/rest/jsonplaceholder/: posts_asset.py
