[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-automation-agent"
version = "0.1.0"
description = "EU AI Act-compliant scaffold for automating Dagster ingest PRs with GitHub Copilot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Vinita Silaparasetty" }]
keywords = ["dagster", "copilot", "ingest", "automation", "eu-ai-act"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

dependencies = []

[project.optional-dependencies]
dagster = [
    "dagster>=1.7.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "sqlalchemy>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "hatch",
]

[project.urls]
Homepage = "https://github.com/VinitaSilaparasetty/pr-automation-agent"
Issues = "https://github.com/VinitaSilaparasetty/pr-automation-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_automation_agent"]
