[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-automation-agent"
version = "0.1.0"
description = "EU AI Act-compliant scaffold and utilities for automating ingest PRs with GitHub Copilot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Vinita Silaparasetty", email = "info@aevoxis.de" }]
keywords = ["dagster", "copilot", "ingest", "automation", "eu-ai-act", "pr-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dagster = [
    "dagster>=1.7.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "sqlalchemy>=2.0.0",
]
dev = [
    "dagster>=1.7.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "sqlalchemy>=2.0.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
pr-agent = "pr_automation_agent.cli:cli"

[project.urls]
Homepage = "https://github.com/VinitaSilaparasetty/pr-automation-agent"
Issues = "https://github.com/VinitaSilaparasetty/pr-automation-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_automation_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "compliance/AI_TRANSPARENCY_NOTICE.md",
    "compliance/HUMAN_OVERSIGHT_POLICY.md",
    "examples/",
    "tests/",
    "README.md",
    "LICENSE",
    "PRIVACY.md",
    "CONNECTING.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
